@@ -10,6 +10,8 @@ Version X.X.X (unreleased)
     the source, it requires --force for unversioned and/or modified items
     and removes files and uncommitted directories from source
  * checkouts, updates, switches now print received revision on final line.
+ * new 'svn info' command that prints out information about a versioned
+    resource.
 
  Developer-visible changes:
  * updates can deal with disjoint urls.
